# dopamine

./: .gitignore  .pre-commit-config.yaml  peregrine_install_poetry.sh  pyproject.toml  requirements.txt  setup.py  thesis_build_run_max.sh
data_analysis/: config.R  plots.R  requirements.R  utils.R
dopamine/: .gitignore  __init__.py
dopamine/colab/: utils.py
dopamine/continuous_domains/: run_experiment.py  train.py
dopamine/discrete_domains/: atari_lib.py  checkpointer.py  gym_lib.py  iteration_statistics.py  legacy_networks.py  logger.py  run_experiment.py  train.py
dopamine/jax/: continuous_networks.py  losses.py  networks.py
dopamine/replay_memory/: circular_replay_buffer.py  prioritized_replay_buffer.py  sum_tree.py
dopamine/thesis/: config.py  configs.py  constants.py  custom_pytrees.py  dqv.py  experiment_data.py  exploration.py  instantiators.py  jax_utils.py  networks.py  offline_circular_replay_buffer.py  patcher.py  types.py  utils.py
dopamine/utils/: agent_visualizer.py  atari_plotter.py  bar_plotter.py  example_viz.py  example_viz_lib.py  line_plotter.py  plotter.py  test_utils.py
peregrine/: activate_thesis_env.sh  correct_magit.el  download_pong_dqn_replay_dataset.sh  init_thesis_env.sh  jobscript_py_module.sh  load_modules.sh  mongo_logs_follow.sh  mongo_singularity.sh  start_mongo.sh  stop_mongo.sh
peregrine/experiments/: time_batchlearner.sh  time_batchlearner_train.sh  time_batchlearner_train_cc.sh
resources/: TODO.org  symposium_abstract.org  symposium_pres.org
resources/literature/: bibliography.bib  journal.bib
resources/paper/: Makefile  bachelorproject.sty  bibliography.bib  stats_test_table.org  table.tex  thesis.tex
resources/papers/: bibliography.bib  journal.org  (+1 more)
thesis/: dqn_cartpole.gin  experiment_data.py  test_dqn.py  utils.py
(+332 files in other folders)
